--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,3 @@
-:root{
-    --cor-de-fundo: #2e2e2e;
-    --verde:  #29ce00;
-    --branco:  #ffffff;
-    --botao-ativo:  #ff465b;
-    --botao-inativo: rgba(73, 64, 182, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.6)
-}
-
-body{
-    background-color: var(--cor-de-fundo);
-    color: var(--branco);
-    font-family: 'Chakra Petch', sans-serif;
+body {
+    background-image: linear-gradient(to bottom, hsl(106, 32%, 52%), #79b35f);
 }
