--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,28 @@
 body {
+    position: relative;
     background-image: linear-gradient(to bottom, hsl(106, 32%, 52%), #79b35f);
 }
+body::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20%; /* Ajuste conforme necessário para o efeito de grama */
+    background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fbr.freepik.com%2Ffotos%2Fgrama&psig=AOvVaw0Zd5YruC-aX3rOM2ZtTxjf&ust=1721907862712000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPDn7unMv4cDFQAAAAAdAAAAABAE');
+    background-size: cover; /* Para cobrir o pseudo-elemento */
+    background-repeat: no-repeat; /* Evita repetições da imagem */
+    background-position: center top; /* Posicionamento da textura */
+    z-index: -1; /* Coloca o pseudo-elemento atrás do conteúdo */
+    /* Outras propriedades de estilo conforme necessário */
+}
+
 
 .centralizado {
     text-align: center;
     /* Outros estilos opcionais para a section */
     padding: 20px;
-    background: linear-gradient(to bottom, #38b0e7, #f7f7f7); /* Gradiente linear */
+    background: linear-gradient(to bottom, #38b0e7, #aad5f1); /* Gradiente linear */
     /* Outros estilos opcionais para a section */
 }
 
