--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body::after {
     left: 0;
     width: 100%;
     height: 20%; /* Ajuste conforme necessário para o efeito de grama */
-    background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fbr.freepik.com%2Ffotos%2Fgrama&psig=AOvVaw0Zd5YruC-aX3rOM2ZtTxjf&ust=1721907862712000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPDn7unMv4cDFQAAAAAdAAAAABAE');
+    background-image: url();
     background-size: cover; /* Para cobrir o pseudo-elemento */
     background-repeat: no-repeat; /* Evita repetições da imagem */
     background-position: center top; /* Posicionamento da textura */
@@ -22,7 +22,7 @@ body::after {
     text-align: center;
     /* Outros estilos opcionais para a section */
     padding: 20px;
-    background: linear-gradient(to bottom, #38b0e7, #aad5f1); /* Gradiente linear */
+    background: linear-gradient(to bottom, #35a9de, #aad5f1); /* Gradiente linear */
     /* Outros estilos opcionais para a section */
 }
 
@@ -32,3 +32,4 @@ h1 {
     color: #333; /* Cor do texto */
     margin-bottom: 20px; /* Margem inferior para espaçamento */
 }
+
